Add HXH to Z pass and HZH To X pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,8 @@ set(TRANSFORMATION_PASSES_SOURCE_FILES
     QirHadamardAndXGateSwitch.cpp
     QirHadamardAndYGateSwitch.cpp
     QirHadamardAndZGateSwitch.cpp
+    QirHXHToZ.cpp
+    QirHZHToX.cpp
     # M
     QirMergeRotations.cpp
     # N
