Add HXH to Z pass

--- a/src/pass_runner/passes/CMakeLists.txt
+++ b/src/pass_runner/passes/CMakeLists.txt
@@ -26,6 +26,7 @@ set(PASSES_SOURCE_FILES
     QirHadamardAndXGateSwitch.cpp
     QirHadamardAndYGateSwitch.cpp
     QirHadamardAndZGateSwitch.cpp
+    QirHXHToZ.cpp
     # M
     QirMergeRotations.cpp
     # N
