Remove metadata dependency and move the PassModule from QRM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,55 +33,47 @@ find_package(qinfo REQUIRED)
 # Find the Threads package
 find_package(Threads REQUIRED)
 
+# Find the LLVM package
+find_package(LLVM REQUIRED CONFIG)
+
 # Set LLVM_ENABLE_THREADS to ON
 set(LLVM_ENABLE_THREADS ON)
-
-# Find LLVMConfig.cmake
-find_path(LLVM_CONFIG_DIR LLVMConfig.cmake HINTS "${CMAKE_PREFIX_PATH}" ENV
-                                                 LLVM_DIR)
-
-if(NOT LLVM_CONFIG_DIR)
-  message(
-    FATAL_ERROR "LLVMConfig.cmake not found. Set CMAKE_PREFIX_PATH or LLVM_DIR."
-  )
-endif()
 
 # Include LLVMConfig.cmake
 list(APPEND CMAKE_PREFIX_PATH "${LLVM_CONFIG_DIR}")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_CONFIG_DIR}")
-find_package(LLVM REQUIRED CONFIG)
 
 # Set up LLVM-specific flags
 add_definitions(${LLVM_DEFINITIONS})
 
 # Add QMAP
 add_subdirectory(extern/mqt-qmap)
-add_subdirectory(src)
+#add_subdirectory(src)
 
 # Include all transformation passes here
 set(TRANSFORMATION_PASSES_SOURCE_FILES
     # A
-    QirAnnotateUnsupportedGates.cpp
+    #QirAnnotateUnsupportedGates.cpp
     # B
     QirBarrierBeforeFinalMeasurements.cpp
     # C
-    QirCNotToHCZHDecomposition.cpp
+    #QirCNotToHCZHDecomposition.cpp
     QirCommuteCnotRx.cpp
     QirCommuteRxCnot.cpp
     QirCommuteCnotX.cpp
     QirCommuteXCnot.cpp
     QirCommuteCnotZ.cpp
     QirCommuteZCnot.cpp
-    QirCZToHCnotHDecomposition.cpp
+    #QirCZToHCnotHDecomposition.cpp
     # D
     QirDeferMeasurement.cpp
     QirDivisionByZero.cpp
     QirDoubleCnotCancellation.cpp
     # F
-    QirFunctionAnnotator.cpp
+    #QirFunctionAnnotator.cpp
     QirFunctionReplacement.cpp
     # G
-    QirGrouping.cpp
+    #QirGrouping.cpp
     # H
     QirHadamardAndXGateSwitch.cpp
     QirHadamardAndYGateSwitch.cpp
@@ -94,24 +86,24 @@ set(TRANSFORMATION_PASSES_SOURCE_FILES
     QirNormalizeArgAngle.cpp
     QirNullRotationCancellation.cpp
     # P
-    QirPlaceIrreversibleGatesInMetadata.cpp
+    #QirPlaceIrreversibleGatesInMetadata.cpp
     QirPauliGateAndHadamardSwitch.cpp
     ## Q
-    QirQMap.cpp
+    #QirQMap.cpp
     QirQubitRemap.cpp
     # R
-    QirRedundantGatesCancellation.cpp
+    #QirRedundantGatesCancellation.cpp
     QirRemoveBasicBlocksWithSingleNonConditionalBranchInsts.cpp
     #QirRemoveNonEntrypointFunctions.cpp
     QirReplaceConstantBranches.cpp
     QirResourceAnnotation.cpp
     QirReverseCnot.cpp
-    QirRzToRxRyRxDecomposition.cpp
+    #QirRzToRxRyRxDecomposition.cpp
     # S
     QirSDaggerToS.cpp
     QirSToSDagger.cpp
     QirSwapAndCnotReplacement.cpp
-    QirSwapToCnotsDecomposition.cpp
+    #QirSwapToCnotsDecomposition.cpp
     # U
    #QirU3Decomposition.cpp
    #QirU3ToRzRyRzDecomposition.cpp
@@ -147,7 +139,10 @@ add_library(utilities SHARED src/utilities.cpp)
 
 # Install the shared library
 install(TARGETS utilities
-        DESTINATION "${INSTALL_PATH}/lib/passes")
+        DESTINATION "${INSTALL_PATH}/lib/passes"
+        )
+
+ install(FILES include/PassModule.hpp DESTINATION include)
 
 # Compile each pass as a shared object and link it
 # to the required libraries
@@ -215,7 +210,7 @@ target_link_libraries(QirResourceAnnotationPass PRIVATE QirAllocationAnalysisPas
 target_link_libraries(QirZXZDecompositionPass PRIVATE QirZYZDecompositionPass)
 target_link_libraries(QirXYXDecompositionPass PRIVATE QirZYZDecompositionPass)
 #target_link_libraries(QirU3DecompositionPass PRIVATE QirZYZDecompositionPass)
-target_link_libraries(QirQMapPass PRIVATE mqt-qmap-qdmi MQT::ProjectOptions MQT::ProjectWarnings)
+#target_link_libraries(QirQMapPass PRIVATE mqt-qmap-qdmi MQT::ProjectOptions MQT::ProjectWarnings)
 
 #add_custom_target(
 #  uninstall
